--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.0",
+    "cookie-parser": "^1.4.6",
     "cookies-parser": "^1.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
