--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.6",
     "cookies-parser": "^1.2.0",
     "dotenv": "^16.4.5",
+    "e-commerce_store": "file:",
     "express": "^4.21.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
